# NeuralStudio

./: CMakeLists.txt  README.md
NeuralStudio/: CMakeLists.txt
cmake/: neuralstudio.cmake
resources/: app.rc
src/: main.cpp  resources.qrc
src/app/: MainWindow.cpp  MainWindow.h
src/core/batch/: BatchJob.h  BatchRunner.cpp  BatchRunner.h
src/core/dataset/: CompanionFinder.cpp  CompanionFinder.h  Dataset.cpp  Dataset.h  DatasetBundle.h  DatasetLoader.cpp  DatasetLoader.h
src/core/dataset/loaders/: CsvLoader.cpp  CsvLoader.h  IDataLoader.h  NeuralDesignerLoader.cpp  NeuralDesignerLoader.h
src/core/export/: CppExporter.cpp  CppExporter.h  XlsxWriter.cpp  XlsxWriter.h
src/core/nn/: ActivationFunction.h  Layer.cpp  Layer.h  LossFunction.h  ModelSerializer.cpp  ModelSerializer.h  NeuralNetwork.cpp  NeuralNetwork.h  RBFNetwork.cpp  RBFNetwork.h  RBFTrainer.cpp  RBFTrainer.h  Trainer.cpp  Trainer.h
src/core/optimizers/: MetaTrainer.cpp  MetaTrainer.h  NSProblem.cpp  NSProblem.h  acor.cpp  acor.h  arq3.cpp  arq3.h  clpso.cpp  clpso.h  cmaes.cpp  cmaes.h  conjgrad.cpp  conjgrad.h  de.cpp  de.h  genetic.cpp  genetic.h  init.h  jso.cpp  jso.h  lbfgs.cpp  lbfgs.h  levenberg.cpp  levenberg.h  lmcmaes.cpp  lmcmaes.h  mlshaderl.cpp  mlshaderl.h  neldermead.cpp  neldermead.h  optimizer.h  options.h  pbil.cpp  pbil.h  pso.cpp  pso.h  simann.cpp  simann.h  umda.cpp  (+1 more)
src/core/stats/: Statistics.cpp  Statistics.h
src/core/validation/: CrossValidator.cpp  CrossValidator.h
src/ui/panels/: BatchPanel.cpp  BatchPanel.h  BatchPlotWidget.cpp  BatchPlotWidget.h  DataPanel.cpp  DataPanel.h  EvaluationPanel.cpp  EvaluationPanel.h  FriedmanTab.cpp  FriedmanTab.h  NetworkPanel.cpp  NetworkPanel.h  PredictionPanel.cpp  PredictionPanel.h  TrainingPanel.cpp  TrainingPanel.h  WilcoxonTab.cpp  WilcoxonTab.h
src/utils/: Logger.h
